# wgenty-code

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  INSTALL.md  LICENSE  MIGRATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  QUICKSTART.md  README.md  README.zh.md  SECURITY.md  SUBAGENT_EVALUATION_REPORT.md  WGENTY.md  approval_test.txt  benchmark.sh  docker-compose.yml  install-unix.sh  install.ps1  install.sh  package-lock.json  package.json  run.bat  settings.json.template  setup_path.ps1  变形金刚.txt  待改进.md  我爱宝宝.txt  能力测试报告.md
.claude/plans/: plan.md
.github/workflows/: ci.yml  release.yml
.team/inbox/: approval-obs-child.jsonl
.wgenty-code/: settings.local.json
.wgenty-code/memory/: 0e870f50-9fd0-4a29-b5ed-7a058d120eb1.json
.wgenty-code/sdd/: progress.md  task-1-brief.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  verify-report-20f79ef..cb9e0f6.md
.wgenty-code/traces/: s-nested.jsonl
benchmark_results/: benchmark_20260621_004823.txt
claude-code-main (2)/claude-code-main/: CHANGELOG.md
claude-code-rev-main/: package-lock.json
docs/: API.md  PROVIDERS.md  SANDBOX.md  SUBAGENT-FALLBACK.md  _debug_first_turn_context.md  gap-analysis.md  memory-system.md
locales/: en.ftl  zh.ftl
npm/scripts/: assemble.sh
npm/wgenty-code/: README.md  package.json
scripts/: install-linux.sh  install-windows.ps1  install.ps1  install.sh
scripts/codegraph-bench/: ARCHIVED.md  bench-agent-replay.sh  bench-agent.sh  bench-coverage.sh  bench-perf.sh  bench-query.sh  gen-report.sh  probe-codegraph-session-detail.sh  probe-query-output.txt  probe-ripgrep-index.txt  probe-session-schema.txt  probe-session-stats.sh  probe-tool-distribution.sh  probe-tool-frequency.sh  root-cause-analysis.md  run-all.sh  test-probe-ripgrep-index.sh  test-probe-session-stats.sh  test-query-output.sh
scripts/subagent-permission/: README.md  prompts.md  run-unit.sh  setup.sh
src/: lib.rs  main.rs  voice.rs
src/advanced/: mod.rs  project_init.rs  remote.rs  ssh.rs
src/agent/: capability.rs  coordinator.rs  core.rs  events.rs  fallback.rs  identity.rs  mod.rs  progress.rs  store.rs  task_group.rs
src/api/: anthropic_types.rs  error.rs  mod.rs  provider.rs  token_counter.rs  types.rs
src/cli/: args.rs  branding.rs  commands.rs  headless_runtime.rs  mod.rs  repl.rs  subagent.rs  tui_history.rs  tui_ime.rs  tui_repl.rs  ui.rs
src/comet/: guard.rs  mod.rs  protocol.rs  state.rs  workflow.rs
src/config/: agent.rs  api_config.rs  cc_mapping.rs  defaults.rs  guardian.rs  mcp_config.rs  mod.rs  models.rs  prompts.rs  sandbox_settings.rs  services.rs  settings.rs  tests.rs  watcher.rs
src/context/: consolidation.rs  context_window.rs  history.rs  inject.rs  memory_session.rs  migration.rs  mod.rs  session.rs  storage.rs
src/daemon/: auth.rs  handlers.rs  mod.rs  models.rs  routes.rs  state.rs
src/exec_session/: coordinator.rs  git.rs  hooks.rs  mod.rs  node.rs  node_runtime.rs  node_tools.rs  session.rs  verify_gate.rs
src/guardian/: mod.rs
src/gui/: app.rs  brand_icon.rs  chat.rs  chat_types.rs  content_parser.rs  main.rs  mod.rs  settings.rs  sidebar.rs  syntax_highlight.rs  theme.rs  tool_calls.rs
src/hooks/: cc_adapter.rs  mod.rs
src/i18n/: loader.rs  locales.rs  mod.rs  translator.rs
src/knowledge/: builtin.rs  docs.rs  embedded.rs  executor.rs  external.rs  external_registry.rs  loader.rs  mod.rs  policy.rs  registry.rs  root_resolver.rs
src/mcp/: client.rs  codegraph.rs  mod.rs  prompts.rs  proxy.rs  resources.rs  sampling.rs  server.rs  tools.rs  transport.rs
src/memory/: context.rs  history.rs  mod.rs
src/permissions/: mod.rs  policy.rs
src/plugins/: commands.rs  hooks.rs  isolation.rs  loader.rs  mod.rs  package_json.rs  registry.rs
src/prompts/: base.md  init_instructions.md  mod.rs
src/runtime/: command.rs  context.rs  guardian.rs  interaction.rs  interaction_cli.rs  interaction_headless.rs  interaction_tui.rs  mod.rs
src/sandbox/: config.rs  error.rs  mod.rs  platform.rs  policy.rs  profile.rs
src/services/: agents.rs  auto_dream.rs  autonomous_worker.rs  magic_docs.rs  marketplace_resolver.rs  mod.rs  plugin_marketplace.rs  stress_tests.rs  team_memory_sync.rs  voice.rs
src/skills/: builtin.rs  mod.rs  registry.rs
src/state/: agent_phase.rs  mod.rs
src/tasks/: graph.rs  management.rs  mod.rs  store.rs  todo_write.rs  types.rs
src/teams/: approval_registry.rs  failure_diagnostics.rs  guarding_tool_port.rs  mailbox.rs  mod.rs  permission_bridge.rs  rollback.rs  subagent.rs  subagent_health.rs  subagent_loop.rs  subagent_mailbox.rs  subagent_trace.rs  trace_sink.rs  worktree.rs
src/terminal/: history.rs  input.rs  mod.rs
src/tools/: apply_patch.rs  ask_user_question.rs  checkpoint.rs  checkpoint_store.rs  exec_command.rs  execute_command.rs  executor.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  grep.rs  kill_session.rs  list_files.rs  lsp.rs  mod.rs  note_edit.rs  policy.rs  search.rs  session_manager.rs  task_management.rs  think.rs  view.rs  write_stdin.rs
src/transcript/: mod.rs  store.rs
src/tui/: agent.rs  app.rs  app.rs.bak  client.rs  completion.rs  input_reader.rs  mod.rs  theme.rs  traits.rs  util.rs
src/utils/: http.rs  lenient_json.rs  logging.rs  mod.rs  project.rs  startup_timing.rs  stress_tests.rs  stuck_detector.rs
src/voice/: mod.rs
src/wasm/: bridge.rs  client.rs  mod.rs  storage.rs
src/web/: handlers.rs  main.rs  mod.rs  models.rs  routes.rs  server.rs  templates.rs
tests/: codegraph_mcp_e2e.rs  comet_integration_test.rs  comet_slash_prompt_test.rs  integration_test.rs  package_json_test.rs  plugin_loading_test.rs  refactor_e2e_test.rs  skills_test.rs  strict_subagent_isolation.rs  subagent_evaluation.rs  system_reminder.rs  tools_test.rs  unified_subagent_lifecycle.rs  workflow_comet_test.rs
tests/integration/: comet_integration_test.rs  exec_session_e2e.rs  exec_session_node_lifecycle.rs  (+10 more)
(+969 files in other folders)
