[package]
name = "wgenty_code"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust implementation of Wgenty Code CLI"
license = "MIT"
repository = "https://github.com/zhentingWu-wzt/wgenty-code"
default-run = "wgenty-code"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", optional = true }
futures = "0.3"
hmac = "0.12"
rand = "0.8"

# HTTP & API
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots", "blocking"] }
http = "1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Optional: Rhai scripting engine for the run_script tool (heavy to compile).
rhai = { version = "1", optional = true }

# SQLite-backed application storage
rusqlite = { version = "0.31" }

# File system
walkdir = "2.5"
glob = "0.3"
notify = "6.1"

# Terminal UI — ratatui-based frontend (replaces TypeScript/React frontend)
crossterm = "0.28"
ratatui = "0.29"
textwrap = "0.16"
tui-textarea = "0.7"

# Process & Shell
which = "6.0"

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Memory & Cache
lru = "0.12"

# Crypto & Auth
sha2 = "0.10"

# MCP Protocol
async-trait = "0.1"

# Regex & Parsing
regex = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Directories
dirs = "5.0"

# Diff
similar = "2.5"


# File operations
fs_extra = "1.3"

# Compression
flate2 = "1.0"

# WebAssembly
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
image = { version = "0.25", optional = true }




# Web server for plugin marketplace + daemon API
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "cors"] }

# Internationalization (i18n)
fluent = { version = "0.16", optional = true }
fluent-bundle = { version = "0.15", optional = true }
unic-langid = { version = "0.9", optional = true, features = ["macros"] }
rust-embed = { version = "8.5", optional = true }

# Windows sandbox (Job Objects). Only linked on Windows targets.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"
wasm-bindgen-test = "0.3"
serde_yaml = "0.9"
serial_test = "3"

[features]
default = ["i18n", "daemon", "bundled-skills"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
daemon = ["axum", "tower", "tower-http", "tokio-stream"]
i18n = ["fluent", "fluent-bundle", "unic-langid", "rust-embed"]
bundled-skills = ["rust-embed"]
export-icon = ["image"]
# Rhai-powered run_script tool. Off by default - rhai alone costs ~10s on clean builds.
scripting = ["dep:rhai"]
full = ["wasm", "i18n", "daemon", "bundled-skills", "export-icon", "bundled-sqlite", "scripting"]
# Bundle SQLite from source (for platforms without system SQLite, e.g. Windows).
# macOS and Linux use the system SQLite by default, avoiding ~60s of C compilation.
bundled-sqlite = ["rusqlite/bundled"]

[[bin]]
name = "wgenty-code"
path = "src/main.rs"

[[bin]]
name = "export_wgenty_icon"
path = "src/bin/export_wgenty_icon.rs"
required-features = ["export-icon"]

# ── Dev/test compilation profiles ────────────────────────────────────────────
# Explicit incremental compilation for the test profile (inherits dev by
# default, but making it explicit guards against future Cargo changes).
[profile.dev]
incremental = true
# Line tables only: faster link + smaller target/, enough for backtraces in dev.
debug = 1

[profile.test]
incremental = true
debug = 1
